# ParallelTCTN

./: .gitignore  CMakeLists.txt  README.md  compile.sh  job_file.slurm  run_parallel.sh
Container/: TC_parallel.def
code/include/: WRPSampling.h
code/src/: main.cpp
include/: DegreeMap.h  Edge.h  EdgeMap.h  EdgeSet.h  FixedSizePQ.h  GraphStream.h  Hashing.h  NodesMap.h  ParallelTCTN.h  Subgraph.h  SubgraphMap.h  Utils.h  algorithms.h  hashing.h  utils.h
src/: Edge.cpp  EdgeMap.cpp  GraphStream.cpp  NodesMap.cpp  ParallelTCTN.cpp  Subgraph.cpp  SubgraphMap.cpp  Utils.cpp  WRPSampling.cpp  algorithms.cpp  build_oracle.cpp  main.cpp  utils.cpp
